--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     },
     "require": {
 	    "philo/laravel-blade": "3.*",
-        "phpmailer/phpmailer": "^6.0"
+        "phpmailer/phpmailer": "^6.0",
+        "robmorgan/phinx": "0.10.7"
 	}
 }
